Issue #3019107 by mohammad faqeh: [IE] fix the height space under the card image appeared on IE browser

--- a/VARTHEME_SUBTHEME/less/component/card.component.less
+++ b/VARTHEME_SUBTHEME/less/component/card.component.less
@@ -22,6 +22,11 @@
     margin-left: 0;
   }
 
+  > a {
+    display: block;
+    height: 100%;
+  }
+
   > .list-group:first-child {
     .list-group-item:first-child {
       border-radius: @card-border-radius;
